""" This comment is required for Buildifier to be happy. """

module(name = "hastur")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

# Bazel
# =========================================================

# https://github.com/bazelbuild/apple_support
bazel_dep(name = "apple_support", dev_dependency = True)  # Apache-2.0
archive_override(
    module_name = "apple_support",
    integrity = "sha256-pdqkcC56NX9CO4NmZoDTqXu4qyEmqsW9nBiVAz8ZpVo=",
    url = "https://github.com/bazelbuild/apple_support/releases/download/{0}/apple_support.{0}.tar.gz".format("2.5.3"),
)

# https://github.com/bazelbuild/platforms
bazel_dep(name = "platforms")  # Apache-2.0
archive_override(
    module_name = "platforms",
    integrity = "sha256-M4TrHDB2JwT7445EAgThFBVAhsj8iowuPihEECjAGag=",
    url = "https://github.com/bazelbuild/platforms/releases/download/{0}/platforms-{0}.tar.gz".format("1.0.0"),
)

# https://github.com/bazelbuild/rules_cc
RULES_CC_VERSION = "0.2.17"

bazel_dep(name = "rules_cc")  # Apache-2.0
archive_override(
    module_name = "rules_cc",
    integrity = "sha256-KD+hzarxcjN4mHSc9Lmx716iadpZVAlU5R+6DnuPJ3o=",
    strip_prefix = "rules_cc-%s" % RULES_CC_VERSION,
    url = "https://github.com/bazelbuild/rules_cc/releases/download/{0}/rules_cc-{0}.tar.gz".format(RULES_CC_VERSION),
)

cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")

# https://github.com/bazelbuild/rules_java
archive_override(
    module_name = "rules_java",
    integrity = "sha256-neTheMLE+Y0yqv5RlMPytxeuEEBcqhG9y0YKwqb2FRY=",
    url = "https://github.com/bazelbuild/rules_java/releases/download/{0}/rules_java-{0}.tar.gz".format("9.6.1"),
)

# https://github.com/bazelbuild/rules_license
archive_override(
    module_name = "rules_license",
    integrity = "sha256-JtQCH2iY4juC75UweDid1JrCtWGKxWSt5O+HzO0Uezg=",
    urls = ["https://github.com/bazelbuild/rules_license/releases/download/1.0.0/rules_license-1.0.0.tar.gz"],
)

# https://github.com/bazelbuild/rules_python
RULES_PYTHON_VERSION = "1.9.0"

bazel_dep(name = "rules_python")  # Apache-2.0
archive_override(
    module_name = "rules_python",
    integrity = "sha256-CYuhNXjnlsAMhTohYfOCZH8y65p3CZ4ciLxSmTM9DW4=",
    strip_prefix = "rules_python-%s" % RULES_PYTHON_VERSION,
    url = "https://github.com/bazelbuild/rules_python/releases/download/{0}/rules_python-{0}.tar.gz".format(RULES_PYTHON_VERSION),
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12.3",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12.3",
    requirements_lock = "//third_party:requirements.txt",
)
use_repo(pip, "pypi")

# https://github.com/bazel-contrib/rules_fuzzing
RULES_FUZZING_VERSION = "0.6.0"

bazel_dep(name = "rules_fuzzing")  # Apache-2.0
archive_override(
    module_name = "rules_fuzzing",
    integrity = "sha256-hQiXmJ68BlZ+oGyVnrSmEp+lCe0tu9DRR9YtK5hnFKk=",
    strip_prefix = "rules_fuzzing-%s" % RULES_FUZZING_VERSION,
    url = "https://github.com/bazel-contrib/rules_fuzzing/archive/refs/tags/v{0}.tar.gz".format(RULES_FUZZING_VERSION),
)

# https://github.com/bazelbuild/rules_pkg
archive_override(
    module_name = "rules_pkg",
    integrity = "sha256-tckYSiO7C8/yQZgf2dniqXY4oTdMmVO7GAiDbOcR+ZA=",
    url = "https://github.com/bazelbuild/rules_pkg/releases/download/{0}/rules_pkg-{0}.tar.gz".format("1.2.0"),
)

# https://github.com/bazelbuild/rules_proto
archive_override(
    module_name = "rules_proto",
    integrity = "sha256-FKIlhwq06RhpZSz9ae8gKCd/wdxJENZdNTti1uCuIfQ=",
    strip_prefix = "rules_proto-7.1.0",
    urls = ["https://github.com/bazelbuild/rules_proto/releases/download/7.1.0/rules_proto-7.1.0.tar.gz"],
)

# https://github.com/bazelbuild/rules_shell
RULES_SHELL_VERSION = "0.8.0"

bazel_dep(name = "rules_shell")  # Apache-2.0
archive_override(
    module_name = "rules_shell",
    integrity = "sha256-IHIfY5CIecCD+Uhp5hjqjU/17bkf+acqLr7jV/28NS0=",
    strip_prefix = "rules_shell-%s" % RULES_SHELL_VERSION,
    url = "https://github.com/bazelbuild/rules_shell/releases/download/v{0}/rules_shell-v{0}.tar.gz".format(RULES_SHELL_VERSION),
)

# https://github.com/bazelbuild/bazel-skylib
archive_override(
    module_name = "bazel_skylib",
    integrity = "sha256-O1tJAGGB9fj/Ym743c6qlem7itKU97XXsR6p992vjFk=",
    url = "https://github.com/bazelbuild/bazel-skylib/releases/download/{0}/bazel-skylib-{0}.tar.gz".format("1.9.0"),
)

# https://github.com/bazelbuild/stardoc
archive_override(
    module_name = "stardoc",
    integrity = "sha256-q2t0ezFkUQVH92lsbgaSGWbM7H4I2bgexgEzw7CdXl4=",
    url = "https://github.com/bazelbuild/stardoc/releases/download/{0}/stardoc-{0}.tar.gz".format("0.8.1"),
)

# Bazel contrib
# =========================================================

# https://github.com/bazel-contrib/bazel_features
BAZEL_FEATURES_VERSION = "1.45.0"

archive_override(
    module_name = "bazel_features",
    integrity = "sha256-rf2zz/qzqZpjNj2ETVWagZZdK2GmBi3VGj0keNQWdo8=",
    strip_prefix = "bazel_features-%s" % BAZEL_FEATURES_VERSION,
    url = "https://github.com/bazel-contrib/bazel_features/releases/download/v{0}/bazel_features-v{0}.tar.gz".format(BAZEL_FEATURES_VERSION),
)

# https://github.com/bazel-contrib/rules_jvm_external
RULES_JVM_EXTERNAL_VERSION = "6.10"

archive_override(
    module_name = "rules_jvm_external",
    integrity = "sha256-5fg7jyZ40rJkQeXq/vsbBhgmYIQXuNJOXo4V5YXqsbo=",
    patch_cmds = [
        # Avoid what transitive deps we can.
        "sed -i'' -e /package_metadata/d MODULE.bazel",
        "sed -i'' -e /rules_android/d MODULE.bazel",
        "sed -i'' -e /rules_kotlin/d MODULE.bazel",
    ],
    strip_prefix = "rules_jvm_external-%s" % RULES_JVM_EXTERNAL_VERSION,
    url = "https://github.com/bazel-contrib/rules_jvm_external/releases/download/{0}/rules_jvm_external-{0}.tar.gz".format(RULES_JVM_EXTERNAL_VERSION),
)

# Other Bazel-required dependencies
# =========================================================

# https://github.com/fmeum/buildozer
BUILDOZER_VERSION = "8.5.1"

archive_override(
    module_name = "buildozer",
    integrity = "sha256-vQeG4Pi2rtjDWJi0wG9kuoU9YdfINh7bWo1Dxuo39cY=",
    strip_prefix = "buildozer-%s" % BUILDOZER_VERSION,
    url = "https://github.com/fmeum/buildozer/releases/download/v{0}/buildozer-v{0}.tar.gz".format(BUILDOZER_VERSION),
)

# https://github.com/google/googletest
GOOGLETEST_VERSION = "1.17.0"

archive_override(
    module_name = "googletest",
    integrity = "sha256-Zfq3AdmCnTjLd8FKzcQx0hCL/b+JeeQOuK5Wft8Qsnw=",
    strip_prefix = "googletest-%s" % GOOGLETEST_VERSION,
    url = "https://github.com/google/googletest/releases/download/v{0}/googletest-{0}.tar.gz".format(GOOGLETEST_VERSION),
)

# https://github.com/protocolbuffers/protobuf
PROTOBUF_VERSION = "34.1"

archive_override(
    module_name = "protobuf",
    integrity = "sha256-5Ob/EHYM90ei3s0YZ3QfVhsha9YMxAOMh1ZHE6baGEg=",
    patch_cmds = [
        # Avoid what transitive deps we can.
        "sed -i'' -e /aspect_bazel_lib/d MODULE.bazel",
        "sed -i'' -e /jsoncpp/d MODULE.bazel",
        "sed -i'' -e /rules_kotlin/d MODULE.bazel",
    ],
    strip_prefix = "protobuf-%s" % PROTOBUF_VERSION,
    url = "https://github.com/protocolbuffers/protobuf/releases/download/v{0}/protobuf-{0}.tar.gz".format(PROTOBUF_VERSION),
)

# https://github.com/abseil/abseil-cpp
ABSEIL_CPP_VERSION = "20260107.1"

archive_override(
    module_name = "abseil-cpp",
    integrity = "sha256-QxTip8usicrCWi8jIocPND2BV5dWzv9/QxgDwskJAZU=",
    strip_prefix = "abseil-cpp-%s" % ABSEIL_CPP_VERSION,
    url = "https://github.com/abseil/abseil-cpp/releases/download/{0}/abseil-cpp-{0}.tar.gz".format(ABSEIL_CPP_VERSION),
)

# https://github.com/google/re2
RE2_VERSION = "2025-11-05"

archive_override(
    module_name = "re2",
    integrity = "sha256-h/YCnS9t6KoCNlQkCgOtqQ6HbOmkZ24ljdAepMJv/Wc=",
    patch_cmds = [
        # Avoid what transitive deps we can.
        "sed -i'' -e /pybind11_bazel/d MODULE.bazel",
    ],
    strip_prefix = "re2-%s" % RE2_VERSION,
    url = "https://github.com/google/re2/releases/download/{0}/re2-{0}.tar.gz".format(RE2_VERSION),
)

# Third-party Bazel
# =========================================================

# HEAD, last updated at 2026-04-03.
# https://github.com/uber/hermetic_cc_toolchain
HERMETIC_CC_TOOLCHAIN_VERSION = "89a07f91c82b4a7c4d441b5bda72200e1ba5d2a2"

bazel_dep(name = "hermetic_cc_toolchain", dev_dependency = True)  # MIT
archive_override(
    module_name = "hermetic_cc_toolchain",
    integrity = "sha256-KjkzIwuMg+HLzl4HLQUogJ+VCmkwyTFwq6CYmtX2RhE=",
    patch_args = ["-p1"],
    patches = [
        "//third_party/hermetic_cc_toolchain:zig-15.patch",
        # https://github.com/uber/hermetic_cc_toolchain/pull/239
        "//third_party/hermetic_cc_toolchain:external_include_paths.patch",
    ],
    # url = "https://github.com/uber/hermetic_cc_toolchain/releases/download/v{0}/hermetic_cc_toolchain-v{0}.tar.gz".format("4.0.1"),
    strip_prefix = "hermetic_cc_toolchain-%s" % HERMETIC_CC_TOOLCHAIN_VERSION,
    url = "https://github.com/uber/hermetic_cc_toolchain/archive/%s.tar.gz" % HERMETIC_CC_TOOLCHAIN_VERSION,
)

zig_toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig_toolchains, "zig_sdk")

# Misc tools
# =========================================================

# HEAD as of 2024-10-28.
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
archive_override(
    module_name = "hedron_compile_commands",
    integrity = "sha256-ZYEiz7HyW+duohKwD16wR9jirci8+SO5GEYfKx43zfI=",
    patch_cmds = [
        # .h can also appear as a c_source_extension with the new syntax-checking Bazel does.
        # See: https://github.com/hedronvision/bazel-compile-commands-extractor/pull/219
        """sed -i'' -e "s/('.c', '.i')/('.c', '.i', '.h')/" refresh.template.py""",
        # Fix use of autoloaded Bazel rules.
        """sed -i'' -e '2i\\\nbazel_dep(name = "rules_python")\\\n' MODULE.bazel""",
        """sed -i'' -e '59i\\\nload("@rules_python//python:defs.bzl", "py_binary")\\\n' refresh_compile_commands.bzl""",
        """sed -i'' -e 's/native.py_binary(/py_binary(/' refresh_compile_commands.bzl""",
    ],
    strip_prefix = "bazel-compile-commands-extractor-4f28899228fb3ad0126897876f147ca15026151e",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/4f28899228fb3ad0126897876f147ca15026151e.tar.gz",
)

# HEAD as of 2026-01-05.
# https://github.com/erenon/bazel_clang_tidy
BAZEL_CLANG_TIDY_VERSION = "da986512bf1a46831d886fd090393b93b8967a5d"

bazel_dep(name = "bazel_clang_tidy", dev_dependency = True)  # MIT
archive_override(
    module_name = "bazel_clang_tidy",
    integrity = "sha256-WkayQxTZZiU6BVCPgCq0sDQoNrcPeGQa/vbM/UQRIS8=",
    strip_prefix = "bazel_clang_tidy-%s" % BAZEL_CLANG_TIDY_VERSION,
    url = "https://github.com/erenon/bazel_clang_tidy/archive/%s.tar.gz" % BAZEL_CLANG_TIDY_VERSION,
)

# Third-party
# =========================================================

# https://github.com/chriskohlhoff/asio
ASIO_VERSION = "1-38-0"

bazel_dep(name = "asio")  # BSL-1.0
archive_override(
    module_name = "asio",
    build_file = "//third_party:asio.BUILD",
    integrity = "sha256-XPeO3kVv0TuV/mknEfT2ib4myCbx9VQceh3zqjK9nb0=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "asio")
bazel_dep(name = "boringssl")
bazel_dep(name = "rules_cc")
EOF""",
    ],
    strip_prefix = "asio-asio-%s" % ASIO_VERSION,
    url = "https://github.com/chriskohlhoff/asio/archive/asio-%s.tar.gz" % ASIO_VERSION,
)

# https://github.com/google/boringssl
BORINGSSL_VERSION = "0.20260413.0"

bazel_dep(name = "boringssl")  # OpenSSL + ISC
archive_override(
    module_name = "boringssl",
    integrity = "sha256-NWD33T8I4WufhNh3pb4h7GIHFWR4MAlXGvX8xvrXNNI=",
    patch_cmds = [
        # We don't run boringssl's benchmarks, so let's avoid this dependency.
        "sed -i'' -e /google_benchmark/d MODULE.bazel",
    ],
    strip_prefix = "boringssl-%s" % BORINGSSL_VERSION,
    url = "https://github.com/google/boringssl/releases/download/{0}/boringssl-{0}.tar.gz".format(BORINGSSL_VERSION),
)

# https://github.com/google/brotli
BROTLI_VERSION = "1.2.0"

bazel_dep(name = "brotli")  # MIT
archive_override(
    module_name = "brotli",
    integrity = "sha256-gWyW6Ojxk7QBUdrX6P83sSIdAZ28ucNc0/rb/mR33+w=",
    patch_cmds = [
        """sed -i'' -e 's/package(/package(features=["-layering_check"],/' BUILD.bazel""",
        # Add missing loads required for building w/ Bazel 9.
        # See: https://github.com/google/brotli/pull/1412
        """cat <<EOF >MODULE.bazel
module(name = "brotli")
bazel_dep(name = "rules_cc")
EOF""",
        """sed -i'' -e '3i\\\nload("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")\\\n' BUILD.bazel""",
    ],
    strip_prefix = "brotli-%s" % BROTLI_VERSION,
    url = "https://github.com/google/brotli/archive/refs/tags/v%s.tar.gz" % BROTLI_VERSION,
)

# https://github.com/tartanllama/expected
EXPECTED_VERSION = "1.3.1"

bazel_dep(name = "expected")
archive_override(
    module_name = "expected",  # CC0-1.0
    build_file = "//third_party:expected.BUILD",
    integrity = "sha256-mgT09HL7tcML9gQC8cpibEp2mH+GeXjQuKNderP7j+c=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "expected")
bazel_dep(name = "rules_cc")
EOF""",
    ],
    strip_prefix = "expected-%s" % EXPECTED_VERSION,
    url = "https://github.com/tartanllama/expected/archive/v%s.tar.gz" % EXPECTED_VERSION,
)

# HEAD, last updated 2025-04-24.
# https://github.com/googlefonts/opensans
http_file(
    name = "opensans",  # OFL-1.1
    integrity = "sha256-xTrO6i3PW0CYCZwMTQoGHRfheKBJMXtCpCKxqff461k=",
    url = "https://github.com/googlefonts/opensans/raw/bd7e37632246368c60fdcbd374dbf9bad11969b6/fonts/ttf/OpenSans-Regular.ttf",
)

# https://github.com/fmtlib/fmt
FMT_VERSION = "12.1.0"

archive_override(
    module_name = "fmt",
    build_file = "//third_party:fmt.BUILD",
    integrity = "sha256-aV/Rl/pa/4/Ge18rvBEEkKh1zfekFoashRL7SA+orac=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "fmt")
bazel_dep(name = "rules_cc")
EOF""",
    ],
    strip_prefix = "fmt-%s" % FMT_VERSION,
    url = "https://github.com/fmtlib/fmt/releases/download/{0}/fmt-{0}.zip".format(FMT_VERSION),
)

# https://github.com/freetype/freetype
FREETYPE_VERSION = "VER-2-14-2"

bazel_dep(name = "freetype2")  # FTL
archive_override(
    module_name = "freetype2",
    build_file = "//third_party:freetype2.BUILD",
    integrity = "sha256-v7HqvXgz7gtVn0UKmp3jMzfom38tagOlVsCKX7nwYH4=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "freetype2")
bazel_dep(name = "libpng")
bazel_dep(name = "platforms")
bazel_dep(name = "rules_cc")
bazel_dep(name = "zlib")
EOF""",
    ],
    strip_prefix = "freetype-%s" % FREETYPE_VERSION,
    url = "https://github.com/freetype/freetype/archive/%s.tar.gz" % FREETYPE_VERSION,
)

# https://github.com/ArthurSonzogni/FTXUI
FTXUI_VERSION = "6.1.9"

bazel_dep(name = "ftxui")  # MIT
archive_override(
    module_name = "ftxui",
    integrity = "sha256-hoZw5FHDi9w60j0IZ5ZUPN5KhF/QQgFIsZjf9cvggoU=",
    url = "https://github.com/ArthurSonzogni/FTXUI/releases/download/v%s/source.tar.gz" % FTXUI_VERSION,
)

# https://github.com/Dav1dde/glad/
bazel_dep(name = "glad2")
local_path_override(
    # This can't called glad as that will cause rules_python to generate folder
    # structures that conflict with imports with glad in the path.
    module_name = "glad2",  # MIT
    path = "third_party/glad2",
)

# HEAD, last updated at 2025-10-05.
# https://github.com/html5lib/html5lib-tests/
HTML5LIB_TESTS_VERSION = "f994590f528ac8b6073665791ddb1ed85c66dfb2"

bazel_dep(name = "html5lib-tests")
archive_override(
    module_name = "html5lib-tests",  # MIT
    build_file = "//third_party:html5lib-tests.BUILD",
    integrity = "sha256-Mm3mJftYKVzHglTgw+oyyN2jtSfp/nhcxZ3g1EJXYW4=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "html5lib-tests")
EOF""",
    ],
    strip_prefix = "html5lib-tests-%s" % HTML5LIB_TESTS_VERSION,
    url = "https://github.com/html5lib/html5lib-tests/archive/%s.tar.gz" % HTML5LIB_TESTS_VERSION,
)

# https://github.com/unicode-org/icu
ICU_VERSION = "78.3"

bazel_dep(name = "icu")  # Unicode-DFS-2016
archive_override(
    module_name = "icu",
    build_file = "//third_party:icu.BUILD",
    integrity = "sha256-Oi56R2BLpwLzRYeDCOb+/sphLuiVz0pfIi55Vfq/4MA=",
    patch_cmds = [
        "rm source/common/BUILD.bazel",
        "rm source/stubdata/BUILD.bazel",
        "rm source/tools/toolutil/BUILD.bazel",
        "rm source/i18n/BUILD.bazel",

        # icu 76.1's https://github.com/unicode-org/icu/commit/66ba09973a4231711b6de0de042f4e532b1873e5
        # causes pkgdata to segfault due to faulty-looking platform detection.
        # WINDOWS_WITH_MSVC is defined by icu, meaning that
        # pkg_createOptMatchArch never sets the arch to anything, and the
        # nullptr arch is later used like strcmp(nullptr, "x64") in
        # getArchitecture, so let's hack out their fixes.
        "sed -i'' -e 's/if defined(__clang__)/if 0/' source/tools/toolutil/pkg_genc.cpp",
        """cat <<EOF >MODULE.bazel
module(name = "icu")
bazel_dep(name = "rules_cc")
bazel_dep(name = "platforms")
EOF""",
    ],
    strip_prefix = "icu",
    url = "https://github.com/unicode-org/icu/releases/download/release-{0}/icu4c-{0}-sources.tgz".format(ICU_VERSION),
)

# https://www.unicode.org/Public/idna/
http_file(
    name = "idna_mapping_table",
    integrity = "sha256-h/BVBdwCb9sr/xYTK9xoqAFGdYNogqmisYRFQK0744I=",
    url = "https://www.unicode.org/Public/17.0.0/idna/IdnaMappingTable.txt",
)

# https://github.com/ocornut/imgui
IMGUI_VERSION = "1.92.7"

bazel_dep(name = "imgui")  # MIT
archive_override(
    module_name = "imgui",
    build_file = "//third_party:imgui.BUILD",
    integrity = "sha256-shsUzh723U2F+lT2j4RJqb6U87RTq6f+TqKpdk5Dpe8=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "imgui")
bazel_dep(name = "rules_cc")
EOF""",
    ],
    strip_prefix = "imgui-%s" % IMGUI_VERSION,
    url = "https://github.com/ocornut/imgui/archive/v%s.tar.gz" % IMGUI_VERSION,
)

# https://github.com/SFML/imgui-sfml
# 3.0 + support for imgui 1.92.x.
IMGUI_SFML_VERSION = "f768c96c3a8ff8ca9817ea1d1ce597162e7e714c"

bazel_dep(name = "imgui-sfml")  # MIT
archive_override(
    module_name = "imgui-sfml",
    build_file = "//third_party:imgui-sfml.BUILD",
    integrity = "sha256-pWbdZqZmO3S9sJDfWatrwqBXie7QGZbm5cXP9dBFV8Y=",
    patch_cmds = [
        # Use glad for OpenGL instead of the system OpenGL headers.
        "sed -i'' -e /OpenGL.hpp/d imgui-SFML.cpp",
        "sed -i'' -e '4i\\\n#include <glad/gl.h>\\\n' imgui-SFML.cpp",
        "sed -i'' -e '297i\\\n\\\tif (gladLoaderLoadGL() == 0) std::abort();\\\n' imgui-SFML.cpp",
        # Hack in compatibility with imgui 1.92.x. They forgot to fix this when officially adding support for it.
        "sed -i'' -e '/You forgot to create and set font texture/d' imgui-SFML.cpp",
        """cat <<EOF >MODULE.bazel
module(name = "imgui-sfml")
bazel_dep(name = "glad2")
bazel_dep(name = "imgui")
bazel_dep(name = "rules_cc")
bazel_dep(name = "sfml")
EOF""",
    ],
    strip_prefix = "imgui-sfml-%s" % IMGUI_SFML_VERSION,
    url = "https://github.com/SFML/imgui-sfml/archive/%s.tar.gz" % IMGUI_SFML_VERSION,
)

# https://github.com/nst/JSONTestSuite
# HEAD, last updated 2026-02-22.
JSON_TEST_SUITE_VERSION = "1ef36fa01286573e846ac449e8683f8833c5b26a"

bazel_dep(name = "json-test-suite")  # MIT
archive_override(
    module_name = "json-test-suite",
    build_file = "//third_party:json-test-suite.BUILD",
    integrity = "sha256-Mqsvs3zCZnnb2RZNu3BTvO8QE0ZD1TywzvRd52gNzcw=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "json-test-suite")
EOF""",
    ],
    strip_prefix = "JSONTestSuite-%s" % JSON_TEST_SUITE_VERSION,
    url = "https://github.com/nst/JSONTestSuite/archive/%s.tar.gz" % JSON_TEST_SUITE_VERSION,
)

# https://github.com/martinus/nanobench
bazel_dep(name = "nanobench")  # MIT
archive_override(
    module_name = "nanobench",
    build_file = "//third_party:nanobench.BUILD",
    integrity = "sha256-U6WpE/ppXCNUZmG/LNIrKZ4Qo+mU2e2X2vibXK2g2nA=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "nanobench")
bazel_dep(name = "rules_cc")
EOF""",
        # nanobench's use of std::locale segfaults w/ -fno-rtti in combination w/ libstdc++.
        # See: https://github.com/martinus/nanobench/issues/122
        "sed -i'' -e /std::locale\\(/d src/include/nanobench.h",
    ],
    strip_prefix = "nanobench-4.3.11",
    url = "https://github.com/martinus/nanobench/archive/refs/tags/v4.3.11.tar.gz",
)

# https://github.com/libjpeg-turbo/libjpeg-turbo
LIBJPEG_TURBO_VERSION = "3.1.4.1"

bazel_dep(name = "libjpeg-turbo")  # BSD-3-Clause AND IJG
archive_override(
    module_name = "libjpeg-turbo",
    build_file = "//third_party:libjpeg-turbo.BUILD",
    integrity = "sha256-7K6ACOLMmt4vLBu51ebU+3PnxDOGagVr2CmAdBVxoCI=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "libjpeg-turbo")
bazel_dep(name = "bazel_skylib")
bazel_dep(name = "platforms")
bazel_dep(name = "rules_cc")
EOF""",
    ],
    strip_prefix = "libjpeg-turbo-%s" % LIBJPEG_TURBO_VERSION,
    url = "https://github.com/libjpeg-turbo/libjpeg-turbo/releases/download/{0}/libjpeg-turbo-{0}.tar.gz".format(LIBJPEG_TURBO_VERSION),
)

# https://github.com/glennrp/libpng
LIBPNG_VERSION = "1.6.55"

bazel_dep(name = "libpng")  # Libpng
archive_override(
    module_name = "libpng",
    build_file = "//third_party:libpng.BUILD",
    integrity = "sha256-caLFsSGPYMTG0vGVTH6yATIVbK6QvbkLVmwk2wAngqY=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "libpng")
bazel_dep(name = "platforms")
bazel_dep(name = "rules_cc")
bazel_dep(name = "zlib")
EOF""",
    ],
    strip_prefix = "libpng-%s" % LIBPNG_VERSION,
    url = "https://github.com/glennrp/libpng/archive/v%s.tar.gz" % LIBPNG_VERSION,
)

# https://github.com/SFML/SFML
# SFML 3.1.0 and newer added dependencies on things like icu and glib (via harfbuzz),
# so we're staying on 3.0.2 for a bit.
SFML_VERSION = "3.0.2"

bazel_dep(name = "sfml")  # Zlib
archive_override(
    module_name = "sfml",
    build_file = "//third_party:sfml.BUILD",
    integrity = "sha256-ADTgX5VQnl0/uBsWJXE+Btp7Bo8hAojOP9ZxBvj0aZU=",
    patch_cmds = [
        # SFML uses a non-standard include path to vulkan.h
        # libvulkan-dev: /usr/include/vulkan/vulkan.h
        "sed -i'' -e 's|vulkan.h|vulkan/vulkan.h|' src/SFML/Window/Win32/VulkanImplWin32.cpp",
        "sed -i'' -e 's|vulkan.h|vulkan/vulkan.h|' src/SFML/Window/Unix/VulkanImplX11.cpp",
        """cat <<EOF >MODULE.bazel
module(name = "sfml")
bazel_dep(name = "freetype2")
bazel_dep(name = "platforms")
bazel_dep(name = "rules_cc")
bazel_dep(name = "stb")
bazel_dep(name = "udev-zero")
bazel_dep(name = "vulkan")
bazel_dep(name = "xcursor")
bazel_dep(name = "xrandr")
EOF""",
    ],
    strip_prefix = "SFML-%s" % SFML_VERSION,
    url = "https://github.com/SFML/SFML/archive/%s.tar.gz" % SFML_VERSION,
)

# https://github.com/gabime/spdlog
SPDLOG_VERSION = "1.17.0"

bazel_dep(name = "spdlog")  # MIT
archive_override(
    module_name = "spdlog",
    build_file = "//third_party:spdlog.BUILD",
    integrity = "sha256-2IYpVcbXTlhGs/WAsWBdJCixHZekENhuL7E+hXzTp0Q=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "spdlog")
bazel_dep(name = "fmt")
bazel_dep(name = "platforms")
bazel_dep(name = "rules_cc")
EOF""",
    ],
    strip_prefix = "spdlog-%s" % SPDLOG_VERSION,
    url = "https://github.com/gabime/spdlog/archive/v%s.tar.gz" % SPDLOG_VERSION,
)

# HEAD, last updated at 2026-03-17.
# https://github.com/nothings/stb
STB_VERSION = "e6cd9561ea6dae43d41633797745789d142b691e"

archive_override(
    module_name = "stb",
    build_file = "//third_party:stb.BUILD",
    integrity = "sha256-xxSSFsv75nuvoZMlkKhfGbpO362bLsZIgkRUQW0g0iU=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "stb")
bazel_dep(name = "rules_cc")
EOF""",
    ],
    strip_prefix = "stb-%s" % STB_VERSION,
    url = "https://github.com/nothings/stb/archive/%s.tar.gz" % STB_VERSION,
)

# https://www.unicode.org/Public/
bazel_dep(name = "ucd")
archive_override(
    module_name = "ucd",
    build_file_content = """exports_files(["UnicodeData.txt"])""",
    integrity = "sha256-IGbRkJsuqTkWzgktocDuSAjqPvhAfJS08U9bfrJj0o4=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "ucd")
EOF""",
    ],
    url = "https://www.unicode.org/Public/17.0.0/ucd/UCD.zip",
)

# https://github.com/illiliti/libudev-zero
archive_override(
    module_name = "udev-zero",
    build_file = "//third_party:udev-zero.BUILD",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "udev-zero")
bazel_dep(name = "platforms")
bazel_dep(name = "rules_cc")
EOF""",
    ],
    sha256 = "0bd89b657d62d019598e6c7ed726ff8fed80e8ba092a83b484d66afb80b77da5",
    strip_prefix = "libudev-zero-1.0.3",
    url = "https://github.com/illiliti/libudev-zero/archive/1.0.3.tar.gz",
)

# https://github.com/KhronosGroup/Vulkan-Headers
# https://github.com/KhronosGroup/Vulkan-Hpp
VULKAN_TAG = "1.4.349"

archive_override(
    module_name = "vulkan",
    build_file = "//third_party:vulkan.BUILD",
    integrity = "sha256-17hHEvhGlle6o3pDbRoj778KY1T8iDW2dY7wNuFdzBQ=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "vulkan")
bazel_dep(name = "rules_cc")
bazel_dep(name = "platforms")
EOF""",
    ],
    strip_prefix = "Vulkan-Headers-%s" % VULKAN_TAG,
    url = "https://github.com/KhronosGroup/Vulkan-Headers/archive/v%s.tar.gz" % VULKAN_TAG,
)

bazel_dep(name = "vulkan_hpp")  # Apache-2.0
archive_override(
    module_name = "vulkan_hpp",
    build_file = "//third_party:vulkan_hpp.BUILD",
    integrity = "sha256-U7XWE2o7MQPTq1EXD6TRA7cQ2KoiHwBuMAmFqQB0RwA=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "vulkan_hpp")
bazel_dep(name = "rules_cc")
bazel_dep(name = "vulkan")
EOF""",
    ],
    strip_prefix = "Vulkan-Hpp-%s" % VULKAN_TAG,
    url = "https://github.com/KhronosGroup/Vulkan-Hpp/archive/v%s.tar.gz" % VULKAN_TAG,
)

# HEAD, last updated at 2026-04-16.
# https://github.com/web-platform-tests/wpt/blob/master/url/resources/urltestdata.json
WPT_REVISION = "d61231d9ceef372cc66d64ac19c467c2506a8814"

http_file(
    name = "wpt_urltestdata",
    integrity = "sha256-H75kzQrtva2lnAfg2Z8faoVwQ3Wd2u6GDY4vaD2INno=",
    url = "https://raw.githubusercontent.com/web-platform-tests/wpt/%s/url/resources/urltestdata.json" % WPT_REVISION,
)

# https://gitlab.freedesktop.org/xorg/lib/libxcursor
XCURSOR_VERSION = "1.2.3"

archive_override(
    module_name = "xcursor",
    build_file = "//third_party:xcursor.BUILD",
    integrity = "sha256-hAKS5c366Ni3lboAvL5iCg3gr2rhhH4ULfCd7IanDtw=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "xcursor")
bazel_dep(name = "rules_cc")
bazel_dep(name = "xrender")
EOF""",
    ],
    strip_prefix = "libxcursor-libXcursor-%s" % XCURSOR_VERSION,
    urls = [
        "https://github.com/robinlinden/libxcursor/archive/libXcursor-%s.tar.gz" % XCURSOR_VERSION,
        "https://gitlab.freedesktop.org/xorg/lib/libxcursor/-/archive/libXcursor-{0}/libxcursor-libXcursor-{0}.tar.gz".format(XCURSOR_VERSION),
    ],
)

# https://gitlab.freedesktop.org/xorg/lib/libxext
XEXT_VERSION = "1.3.7"

archive_override(
    module_name = "xext",
    build_file = "//third_party:xext.BUILD",
    integrity = "sha256-Zamx5iVkM68LN7AUNrLk7kmY2nNoXZyP5XmvjsCG3NI=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "xext")
bazel_dep(name = "rules_cc")
EOF""",
    ],
    strip_prefix = "libxext-libXext-%s" % XEXT_VERSION,
    urls = [
        "https://github.com/robinlinden/libxext/archive/libXext-%s.tar.gz" % XEXT_VERSION,
        "https://gitlab.freedesktop.org/xorg/lib/libxext/-/archive/libXext-{0}/libxext-libXext-{0}.tar.gz".format(XEXT_VERSION),
    ],
)

# https://gitlab.freedesktop.org/xorg/lib/libxrandr
XRANDR_VERSION = "1.5.5"

archive_override(
    module_name = "xrandr",
    build_file = "//third_party:xrandr.BUILD",
    integrity = "sha256-MyYFgaoikZGcBvLhQtoWShvYNly593ELVf35rNDGV2I=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "xrandr")
bazel_dep(name = "rules_cc")
bazel_dep(name = "xext")
bazel_dep(name = "xrender")
EOF""",
    ],
    strip_prefix = "libxrandr-libXrandr-%s" % XRANDR_VERSION,
    urls = [
        "https://github.com/robinlinden/libxrandr/archive/libXrandr-%s.tar.gz" % XRANDR_VERSION,
        "https://gitlab.freedesktop.org/xorg/lib/libxrandr/-/archive/libXrandr-{0}/libxrandr-libXrandr-{0}.tar.gz".format(XRANDR_VERSION),
    ],
)

# https://gitlab.freedesktop.org/xorg/lib/libxrender
XRENDER_VERSION = "0.9.12"

archive_override(
    module_name = "xrender",
    build_file = "//third_party:xrender.BUILD",
    integrity = "sha256-RwVZ354OTbyB1YVdPTZKF+EiY2AKCCFyMvix9u883b8=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "xrender")
bazel_dep(name = "rules_cc")
EOF""",
    ],
    strip_prefix = "libxrender-libXrender-%s" % XRENDER_VERSION,
    urls = [
        "https://github.com/robinlinden/libxrender/archive/libXrender-%s.tar.gz" % XRENDER_VERSION,
        "https://gitlab.freedesktop.org/xorg/lib/libxrender/-/archive/libXrender-{0}/libxrender-libXrender-{0}.tar.gz".format(XRENDER_VERSION),
    ],
)

# https://github.com/madler/zlib
ZLIB_VERSION = "1.3.2"

bazel_dep(name = "zlib")  # Zlib
archive_override(
    module_name = "zlib",
    # The official zlib BUILD file doesn't define things like ZLIB_CONST, so
    # it's not very nice to use.
    build_file = "//third_party:zlib.BUILD",
    integrity = "sha256-uZoLhsC6k2DsfnjE8eQ7HL3x5pNsj6D2g1wM1pSklaE=",
    strip_prefix = "zlib-%s" % ZLIB_VERSION,
    url = "https://github.com/madler/zlib/archive/v%s.tar.gz" % ZLIB_VERSION,
)

# https://github.com/facebook/zstd
ZSTD_VERSION = "1.5.7"

bazel_dep(name = "zstd")
archive_override(
    module_name = "zstd",  # BSD-3-Clause
    build_file = "//third_party:zstd.BUILD",
    integrity = "sha256-6zPlH0mhXgI5UM14Jcp0pKK0Pbg1SCWsJPwbfuCeb6M=",
    patch_cmds = [
        """cat <<EOF >MODULE.bazel
module(name = "zstd")
bazel_dep(name = "platforms")
bazel_dep(name = "rules_cc")
EOF""",
    ],
    strip_prefix = "zstd-%s" % ZSTD_VERSION,
    url = "https://github.com/facebook/zstd/releases/download/v{0}/zstd-{0}.tar.gz".format(ZSTD_VERSION),
)
